# pixel_flow

./: .gitignore  Board.cc  Board.h  CMakeLists.txt  ControllerBoard.cc  ControllerBoard.h  Data.cc  Data.h  GitHubDataExporter.cc  GitHubDataExporter.h  GoogleSheetsDataExporter.cc  GoogleSheetsDataExporter.h  MainWindow.cc  MainWindow.h  MainWindow.ui  Pixel.cc  Pixel.h  README.md  Resource.qrc  github.csv  googlesheets.csv  main.cpp  out  out.csv  out.json  pixel_flow.aps  pixel_flow.vcxproj  pixel_flow.vcxproj.filters  resource.h
Google_tests/: CMakeLists.txt  ExampleTest.cpp  test.cpp
html/: md_README.html  pages.html
html/search/: all_0.js  pages_0.js
latex/: md_README.tex  refman.tex
src/: Activity.cc  Activity.h  Board.cc  Board.h  CMakeLists.txt  ControllerBoard.cc  ControllerBoard.h  CsvDataParser.cc  CsvDataParser.h  CsvDataParser2.cc  CsvDataParser2.h  CsvParser.cc  CsvParser.h  Data.cc  Data.h  ExampleClass.cpp  ExampleClass.h  GitHubDataExporter.cc  GitHubDataExporter.h  GoogleSheetsDataExporter.cc  GoogleSheetsDataExporter.h  Pixel.cc  Pixel.h  main.cpp  main.py
x64/Debug/: pixel_flow.exe.recipe  pixel_flow.vcxproj.FileListAbsolute.txt
x64/Debug/moc/: moc_MainWindow.cpp
x64/Debug/pixel_flow.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  pixel_flow.lastbuildstate  pixel_flow.write.1u.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
x64/Debug/qmake/: qtvars_x64_Debug.props
x64/Debug/qmake/temp/: .qmake.stash  props.txt  qtvars.vcxproj
x64/Debug/rcc/: qrc_MainWindow.cpp  qrc_Resource.cpp
x64/Debug/uic/: ui_MainWindow.h
